added header and button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-
+    <header>
+        <h1>Share your <span>Recipe</span> with others</h1>
+        <button>Add Recipe</button>
+    </header>
 </body>
 
 </html>
