--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <script src="./main.js" defer></script>
     <title>Recipe-APP</title>
 </head>
 
@@ -14,6 +15,31 @@
         <h1>Share your <span>Recipe</span> with others</h1>
         <button>Add Recipe</button>
     </header>
+    <main>
+        <section class="form-section">
+            <label for="recipe_name">Recipe Name </label>
+            <input type="text" id="recipe_name" name="RecipeName">
+            <label for="ingredients">Add Ingredients</label>
+            <input type="text" id="ingredients" name="Ingredients">
+            <label for="img">Recipe Image:</label>
+            <input type="file" id="img" name="Image" accept="image/*">
+            <textarea name="descritions" id="descriptions" cols="30" rows="10" placeholder="Add your recipe description"></textarea>
+
+        </section>
+
+        <section class="recipe-card">
+
+            <div class="card">
+                <h4>Recipe Name</h4>
+                <p>Recipe descriptions</p>
+                <p>Ingredients</p>
+            </div>
+
+
+        </section>
+
+
+    </main>
 </body>
 
 </html>
