--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
-    <script src="./js/main.js" defer></script>
+    <script src="./js/recipe.js" defer></script>
+    <script src="./js/index.js" defer></script>
     <title>Recipe-APP</title>
 </head>
 
