--- a/index.html
+++ b/index.html
@@ -22,36 +22,20 @@
             <label for="descriptions">Description</label>
             <input type="text" id="descriptions" name="descriptions">
             <label for="img">Recipe Image:</label>
-            <input type="file" id="img" name="Image" accept="image/*">
+            <input type="file" id="img" name="Image" accept=".gif,.jpg,.jpeg,.png,.doc,.docx">
             <textarea name="ingredients" id="ingredients" cols="30" rows="10" placeholder="Add your recipe ingredients"></textarea>
             <button class="button">Add Recipe</button>
         </section>
 
-        <section class="recipe-card">
-            <div class="card">
+        <section id="displayRecipes" class="recipe-card">
+            <!-- <div class="card">
                 <img class="image" src="./Images/background.jpg" alt="dish pic">
                 <h4 class="name">Recipe Name</h4>
                 <p class="descriptions">Recipe descriptions</p>
                 <p class="ingredients">Ingredients</p>
-            </div>
-            <div class="card">
-                <img class="image" src="./Images/background-image.jpg" alt="dish pic">
-                <h4 class="name">Recipe Name</h4>
-                <p class="descriptions">Recipe descriptions</p>
-                <p class="ingredients">Ingredients</p>
-            </div>
-            <div class="card">
-                <img class="image" src="./Images/background-image.jpg" alt="dish pic">
-                <h4 class="name">Recipe Name</h4>
-                <p class="descriptions">Recipe descriptions</p>
-                <p class="ingredients">Ingredients</p>
-            </div>
-            <div class="card">
-                <img class="image" src="./Images/background.jpg" alt="dish pic">
-                <h4 class="name">Recipe Name</h4>
-                <p class="descriptions">Recipe descriptions</p>
-                <p class="ingredients">Ingredients</p>
-            </div>
+                <button class="button_card">Delete Recipe</button>
+            </div> -->
+
         </section>
 
 
