add a media query

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <section class="form-section">
             <label for="recipe_name">Recipe Name </label>
             <input type="text" id="recipe_name" name="RecipeName">
-            <label for="descriptions">Description</label>
+            <label for="ingredients">Ingredients</label>
+            <input type="text" id="ingredients" name="ingredients">
+            <label for="descriptions">Descriptions</label>
             <input type="text" id="descriptions" name="descriptions">
-            <label for="img">Recipe Image:</label>
+            <label for="img">Recipe Image</label>
             <input type="file" id="img" name="Image" accept=".gif,.jpg,.jpeg,.png,.doc,.docx">
-            <textarea name="ingredients" id="ingredients" cols="30" rows="10" placeholder="Add your recipe ingredients"></textarea>
             <button class="button">Add Recipe</button>
         </section>
 
