--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>Share your <span>Recipe</span> with others</h1>
+        <h1>Save <span>Recipe</span> for future</h1>
     </header>
     <main>
         <section class="form-section">
