changed the inoput to textarea

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <label for="recipe_name">Recipe Name </label>
             <input type="text" id="recipe_name" name="RecipeName">
             <label for="ingredients">Ingredients</label>
-            <input type="text" id="ingredients" name="ingredients">
+            <textarea name="ingredients" id="ingredients" cols="30" rows="10"></textarea>
             <label for="descriptions">Descriptions</label>
-            <input type="text" id="descriptions" name="descriptions">
+            <textarea name="descriptions" id="descriptions" cols="30" rows="10"></textarea>
+            <!-- <input type="text" id="descriptions" name="descriptions"> -->
 
             <button class="button">Add Recipe</button>
         </section>
